:bug: address quote spacing issue (#74)

--- a/_sass/dash/_layout.scss
+++ b/_sass/dash/_layout.scss
@@ -169,7 +169,7 @@
     }
 
     & > p {
-        display: block;
+        display: inline-block;
         padding-left: 3em;
     }
 
@@ -180,6 +180,10 @@
       float: left;
 
       font-size: 2em;
+    }
+
+    & > ul {
+      margin-left: 3em;
     }
 
     li {
